--- a/seaweedfs/docker/Dockerfile
+++ b/seaweedfs/docker/Dockerfile
@@ -23,5 +23,7 @@ VOLUME /data
 COPY filer.toml /etc/seaweedfs/filer.toml
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+RUN mkdir /leveldb
+RUN chmod 777 /leveldb
 
 ENTRYPOINT ["/entrypoint.sh"]
